<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/activity_puzzle_game_select_image">

        <TextView
            android:id="@+id/images_selected"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            android:text="@string/images_selected" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/images_selected"
            android:id="@+id/linear_images"
            android:layout_centerHorizontal="true">

        </LinearLayout>


        <Button
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_images"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/add_image" />

        <Button
            android:id="@+id/save_image_selection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_image_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/save_image_selection" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/save_image_selection_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/cancel" />


    </RelativeLayout>

</ScrollView>