<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/activity_puzzle_game_select_image">

        <TextView
            android:id="@+id/background_option"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            android:text="@string/colour_choose" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_alignParentStart="true"
            android:layout_below="@id/background_option"
            android:layout_marginTop="20dp"
            app:srcCompat="@color/puzzleBackground1"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/background_option"
            android:layout_marginTop="20dp"
            app:srcCompat="@color/puzzleBackground2"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/background_option"
            android:layout_marginTop="20dp"
            app:srcCompat="@color/puzzleBackground3"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imageButton1"
            android:layout_marginTop="20dp"
            app:srcCompat="@color/puzzleBackground4"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imageButton1"
            android:layout_marginTop="20dp"
            app:srcCompat="@color/puzzleBackground5"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/imageButton1"
            android:layout_marginTop="20dp"
            app:srcCompat="@color/puzzleBackground6"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imageButton4"
            android:layout_marginTop="20dp"
            app:srcCompat="@color/puzzleBackground7"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imageButton4"
            android:layout_marginTop="20dp"
            app:srcCompat="@color/puzzleBackground8"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/imageButton4"
            android:layout_marginTop="20dp"
            app:srcCompat="@color/puzzleBackground9"
            android:contentDescription="TODO" />

        <Button
            android:id="@+id/confirm_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageButton7"
            android:layout_marginTop="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancel_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageButton7"
            android:layout_marginTop="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:text="@string/cancel" />


    </RelativeLayout>

</ScrollView>